--- a/Nhom6_QuanLyTiemBanh/Nhom6_QuanLyTiemBanh.csproj
+++ b/Nhom6_QuanLyTiemBanh/Nhom6_QuanLyTiemBanh.csproj
@@ -157,6 +157,9 @@
     <EmbeddedResource Include="HoaDonNhap.resx">
       <DependentUpon>HoaDonNhap.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="NhanVien.resx">
+      <DependentUpon>NhanVien.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
