--- a/Nhom6_QuanLyTiemBanh/Nhom6_QuanLyTiemBanh.csproj
+++ b/Nhom6_QuanLyTiemBanh/Nhom6_QuanLyTiemBanh.csproj
@@ -241,5 +241,11 @@
   <ItemGroup>
     <None Include="Resources\banh.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\pdf_Format1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Logout1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
